kubernetes/01-namespace-config.yaml
---
# Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: FastDataBroker
  labels:
    name: FastDataBroker
